--- a/template.html
+++ b/template.html
@@ -17,7 +17,7 @@
         <div class="col-md-4">
             <a class="thumbnail" href="/vehicles/{id}">
                 <div class="price">{price}</div>
-                <img src="/public/images/prius.jpeg"/>
+                <img src="{photos[0]}"/>
 
                 <div class="info">
                     <table class="table table-condensed">
