--- a/template.html
+++ b/template.html
@@ -14,10 +14,10 @@
     {@slice size="3"}
     <div class="row">
         {#.}
-        <div class="col-md-4">
+        <div class="col-md-4 col-sm-6">
             <a class="thumbnail" href="/vehicles/{id}">
                 <div class="edit">Edit</div>
-                <div class="photo"><img src="{photos[0]}"/></div>
+                <div class="photo"><img src="{photos[0].url}"/></div>
                 <div class="info">
                     <div class="row">
                         <div class="col-md-12 first">
