--- a/template.html
+++ b/template.html
@@ -21,7 +21,7 @@
                 <div class="info">
                     <div class="row">
                         <div class="col-md-12 first">
-                            <h4>{make} {model} <small>{year}</small></h4>
+                            <h4>{make.title} {model.title} <small>{year}</small></h4>
                         </div>
                     </div>
                     <div class="row">
