--- a/template.html
+++ b/template.html
@@ -1,4 +1,4 @@
-<div class="vehicles-listing">
+<div class="vehicles-find">
     {?title}<h4 class="title">{title}{/title}</h4>
     <div class="container-fluid">
         <!--<div class="row">
