--- a/template.html
+++ b/template.html
@@ -18,7 +18,7 @@
             <div class="col-md-{size}">
                 <a class="thumbnail" href="/vehicles/{id}">
                     {?_.edit}<div class="edit">Edit</div>{/_.edit}
-                    <div class="photo"><img src="{_.photos[0].url}"/></div>
+                    <div class="image"><img src="{_.images[0].url}"/></div>
                     <div class="info">
                         <div class="row">
                             <div class="col-md-12 first">
