--- a/template-backup.html
+++ b/template-backup.html
@@ -1,5 +1,5 @@
 <div class="vehicles-find">
-    {?title}<h2 class="title">{title}{/title}</h2>
+    {?title}<h2 class="title">{title}</h2>{/title}
     {?deck}
     <div class="card-deck d-block d-md-flex">{/deck}
         {#vehicles}
