--- a/template.html
+++ b/template.html
@@ -1,86 +1,27 @@
-<div class="vehicles-find">
-    {?title}<h2 class="title">{title}{/title}</h2>
-    <div class="container-fluid1">
-        <!--<div class="row">
-            <div class="col-md-7"></div>
-            <div class="col-md-5">
-                <div class="row auto-sort">
-                    <button type="button" class="btn btn-primary" name="year">Year</button>
-                    <button type="button" class="btn btn-success" name="price">Price</button>
-                    <button type="button" class="btn btn-info" name="recent">Recent</button>
-                    <button type="button" class="btn btn-warning" name="popular">Popular</button>
+{?title}<h2 class="title">{title}</h2>{/title}
+{@slice context=vehicles size="30"}
+<div class="row">
+    {#.}
+    <div class="col-sm-6 col-lg-{size}">
+        <a class="thumbnail" href="/vehicles/{id}">
+            <div class="card mb-3">
+                <img src="{_.images[0].url}" class="card-img-top" alt="...">
+                <div class="card-body">
+                    <h5 class="card-title">{_.make.title} {_.model.title}
+                        <small class="text-muted"> {manufacturedAt|year}</small>
+                    </h5>
+                    <div class="d-flex justify-content-between">
+                        <div class="pr-5">
+                            <small class="text-muted">{price} LKR</small>
+                        </div>
+                        <div class="card-text">
+                            <small class="text-muted">{mileage} km</small>
+                        </div>
+                    </div>
                 </div>
             </div>
-        </div>-->
-        {@slice context=vehicles size="30"}
-        <div class="row">
-            {#.}
-            <div class="col-sm-6 col-lg-{size}">
-                <a class="thumbnail" href="/vehicles/{id}">
-                    <div class="card mb-3">
-                        <img src="{_.images[0].url}" class="card-img-top" alt="...">
-                        <div class="card-body">
-                            <h5 class="card-title">{_.make.title} {_.model.title}
-                                <small class="text-muted"> {manufacturedAt|year}</small>
-                            </h5>
-                            <div class="d-flex justify-content-between">
-                                <div class="pr-5">
-                                    <small class="text-muted">{price} LKR</small>
-                                </div>
-                                <div class="card-text">
-                                    <small class="text-muted">{mileage} km</small>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </a>
-                <!--<a class="thumbnail" href="/vehicles/{id}">
-                    {?_.edit}<div class="edit">Edit</div>{/_.edit}
-                    <div class="image"><img src="{_.images[0].url}"/></div>
-                    <div class="info">
-                        <div class="row">
-                            <div class="col-md-12 first">
-                                <h4>{make.title} {model.title} <small>{year}</small></h4>
-                            </div>
-                        </div>
-                        <div class="row">
-                            <div class="col-md-6 pull-left">
-                                <div class="third"><h6>{price} LKR</h6></div>
-                            </div>
-                            <div class="col-md-6 pull-left">
-                                <div class="third"><h6>{mileage} km</h6></div>
-                            </div>
-                        </div>
-                        &lt;!&ndash;<table class="table table-condensed">
-                            &lt;!&ndash;<tr><td class="name">Price</td><td class="value">10000LKR</td></tr>&ndash;&gt;
-                            <tr>
-                                <td class="name">Model</td>
-                                <td class="value">{make} {model}</td>
-                            </tr>
-                            &lt;!&ndash;<tr>
-                                <td class="name">Year</td>
-                                <td class="value">{year}</td>
-                            </tr>
-                            <tr>
-                                <td class="name">Color</td>
-                                <td class="value">{color}</td>
-                            </tr>
-                            <tr>
-                                <td class="name">Mileage</td>
-                                <td class="value">{mileage}</td>
-                            </tr>
-                            <tr>
-                                <td class="name"><a href="/vehicles/{id}/edit">Edit here</a></td>
-                                <td class="value"></td>
-                            </tr>&ndash;&gt;
-                            &lt;!&ndash;<tr><td class="name">Transmission</td><td class="value">Automatic</td></tr>&ndash;&gt;
-                            &lt;!&ndash;<tr><td class="name">Fuel</td><td class="value">Gasoline</td></tr>&ndash;&gt;
-                        </table>&ndash;&gt;
-                    </div>
-                </a>-->
-            </div>
-            {/.}
-        </div>
-        {/slice}
+        </a>
     </div>
+    {/.}
 </div>
+{/slice}
